Added Appdrive + DriveApp support and Updated GDToT signed-off-by: Pruthvi Kadrekar <pruthvikadrekar80@gmail.com>

--- a/config_sample.env
+++ b/config_sample.env
@@ -55,6 +55,9 @@ MEGA_PASSWORD = ""
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
+# AppDrive
+APPDRIVE_EMAIL=
+APPDRIVE_PASS=
 # GDTOT COOKIE
 CRYPT = ""
 # Size Limits
