--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ bencoding
 cfscrape
 feedparser
 flask
+dnspython
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
@@ -19,6 +20,8 @@ psutil
 psycopg2-binary
 pybase64
 pyrogram
+lxml
+pymongo
 python-dotenv
 python-magic
 python-telegram-bot
